test/should-fail/vsgc2889.f3
/**
 * Should fail test VSGC-2889 : ClassCastException JCIf to JCExpression in F3ToJava.translateToExpression on member select in KeyFrame literal
 *
 * @test/compile-error
 */

import f3.animation.Timeline;

var value = 1.0;

var timeline = Timeline {
   keyFrames: [
      at (0s) {
         value => 2.0;
      }
   ]
}

var timeline2 = Timeline {
   keyFrames: [
      at (0s) { timeline.play() }
   ]
}

